--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/pubsub": "^4.1.0"
+    "@google-cloud/pubsub": "^4.1.0",
+    "dotenv": "^16.3.1"
   }
 }
